--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=Rate your Books
 
 # Logging
-logging.level.root=info
-logging.level.de.cimtag.rateyourbooks=debug
+logging.level.root=INFO
+logging.level.de.cimtag.rateyourbooks=DEBUG
+logging.file.name=log/rate-your-books.log
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg%n
+logging.logback.rollingpolicy.max-file-size=10MB
+logging.logback.rollingpolicy.max-history=10
 
 # H2 Database
 spring.datasource.url=jdbc:h2:mem:rateyourbooksdb
