BP8: Professional Database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,17 +7,16 @@ logging.file.name=log/rate-your-books.log
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg%n
 logging.logback.rollingpolicy.max-file-size=10MB
 logging.logback.rollingpolicy.max-history=10
-
-# H2 Database
-spring.datasource.url=jdbc:h2:mem:rateyourbooksdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+# PostgreSQL Database
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/rateyourbooks?currentSchema=rateyourbooks
+spring.datasource.username=postgres
 spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# Flyway
+spring.flyway.locations=classpath:/db/migration
+spring.flyway.schemas=rateyourbooks
+spring.flyway.enabled=true
 
 # Hibernate settings
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-
