--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ logging.file.name=log/rate-your-books.log
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg%n
 logging.logback.rollingpolicy.max-file-size=10MB
 logging.logback.rollingpolicy.max-history=10
+
 # Flyway
 spring.flyway.locations=classpath:/db/migration
 spring.flyway.schemas=rateyourbooks
@@ -15,3 +16,10 @@ spring.flyway.enabled=true
 # Hibernate settings
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+# SpringDoc
+springdoc.swagger-ui.operationsSorter=method
+# PostgreSQL Database
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/rateyourbooks?currentSchema=rateyourbooks
+spring.datasource.username=postgres
+spring.datasource.password=password
