--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # PostgreSQL Database
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/rateyourbooks-test?currentSchema=rateyourbooks
+spring.datasource.url=jdbc:postgresql://db:5432/rateyourbooks
 spring.datasource.username=postgres
 spring.datasource.password=password
