--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,16 +10,13 @@ logging.logback.rollingpolicy.max-history=10
 
 # Flyway
 spring.flyway.locations=classpath:/db/migration
-spring.flyway.schemas=rateyourbooks
 spring.flyway.enabled=true
 
 # Hibernate settings
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
 # SpringDoc
 springdoc.swagger-ui.operationsSorter=method
-# PostgreSQL Database
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/rateyourbooks?currentSchema=rateyourbooks
-spring.datasource.username=postgres
-spring.datasource.password=password
+# Spring Profile
+spring.profiles.active=dev
