--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,10 @@
           <outputDir>${project.basedir}/openapi</outputDir>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.graalvm.buildtools</groupId>
+        <artifactId>native-maven-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 
